<input type="number">: Normalize full-width input and enforce stricter validation https://bugs.webkit.org/show_bug.cgi?id=284363

Reviewed by Aditya Keerthi.

This patch adds normalization support for full-width digits, the minus sign variants (U+FF0D, U+30FC, U+2212), and the full-width full stop (U+FF0E) by mapping them to their ASCII equivalents (e.g., U+002D for minus, U+002E for dot) when handling typed input in <input type=number> fields.
These characters are commonly produced by Japanese IMEs when entering numeric values.
In addition, like Chromium, disallowed characters are now rejected, and normalization is applied immediately after input.

Canonical link: https://commits.webkit.org/298613@main